# practiceGL

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  main.cpp  privdef.h  shader.cpp  shader.frag  shader.h  shader.vert
